# MCP-AGENT_1

./: .gitignore  README.md  merge_documents.py  pyproject.toml  run.py  setup.ps1  test_gemini.py
documents/: ESS_FOUNDATION_STACK_Data_Security_Compliance.docx  ESS_FOUNDATION_STACK_ORCHESTRATE DTP TEST PLAN.docx  ESS_LAUNCH_PACK_Email_Integration_Checklist.docx  ESS_LAUNCH_PACK_Product_Requirement_DESTINATION_CHECKLIST.docx  ESS_REFERENCE_STACK_EMAIL_ITERBALE_DOMAIN_SETUP_GUIDE.docx  Success Plan Requirements Checklist LAUNCH PACK.docx
documents/ORCHESTRATE DTC/: ESS_FOUNDATION_STACK_Testing_QA_OUTLINE.docx
documents/ORCHESTRATE DTP/: ESS PRODUCT SCOPE Document.docx  ESS_LAUNCH_PACK_Data_Discovery_TARGET_LIST_CHECKLIST.docx
documents/ORCHESTRATE HCP/: Dashboard User Guide REFERENCE STACK.docx  REFERENCE_STACK_Dashboard User Guide.docx
mcp/agents/: document_merge_agent.py
mcp/core/: config.py  document_parser.py  llm_client.py  server.py
src/: document_processor.py  parallel_document_processor.py  run.py
src/mcp/agents/: document_merge_agent.py
src/mcp/core/: config.py  document_parser.py  llm_client.py  search_client.py  server.py  style_manager.py  utils.py
