[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-agent"
version = "0.1.0"
description = "MCP Document Merge Agent"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.92.0",
    "uvicorn>=0.20.0",
    "python-docx>=0.8.11",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.5.2",
    "openai>=1.12.0",
    "azure-identity>=1.12.0",
    "azure-search-documents>=11.5.2",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.5.0",
    "langgraph>=0.2.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
    "tenacity>=8.2.0",
    "markdown2>=2.4.10"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["mcp", "mcp.agents", "mcp.core"]